# backend/src/requests/router.py
@@ -3,9 +3,9 @@ from typing import Annotated
 
 from fastapi import APIRouter, Depends, HTTPException, Path, status
 
-from src.schemas import ErrorResponse
 from src.requests.cache import TTLCache
 from src.requests.dependencies import get_redis_cache
+from src.schemas import DetailHTTPErrorResponse
 
 from .cache import CacheEntry
 
@@ -14,7 +14,7 @@ router = APIRouter()
 @router.get(
     '/cached/{cachedId}',
     responses={
-        404: {"model": ErrorResponse, "description": "Cached result not found."},
+        404: {"model": DetailHTTPErrorResponse, "description": "Cached result not found."},
     },
 )
 def get_cached_result(cached_id: Annotated[uuid.UUID, Path(alias="cachedId")], cache : Annotated[TTLCache, Depends(get_redis_cache)]) -> CacheEntry:
